[package]
name = "csv_splitter"
version = "0.1.0"
edition = "2018"
authors = ["Nestor Wheelock"]
description = "Splits CSV files into multiple files based on date fields in the first column."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
clap = "3.0"
